--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@ ul{
     margin-left: 30rem;
 }
 .header{
-    width: 100%;
+    position: fixed;
+    width: calc(100% - 30rem);
     height: 5rem;
     background-color: var(--header-footer-color);
     display: flex;
@@ -164,8 +165,43 @@ ul{
     right: 0;
     bottom: 0;
     font-size: var(--header-footer-font-size);
-    color: var(--header-footer-color);
-    background-color: rgba(0, 0, 0, 0.4);
+    color: var(--header-footer-text-color);
+    background-color: var(--header-footer-color);
     padding: .4rem .5rem;
     cursor: pointer;
+}
+
+/* Footer area */
+.footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin-left: 30rem;
+    height: 5rem;
+    width: calc(100% - 30rem);
+    background: var(--header-footer-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+    color: var(--header-footer-text-color);
+}
+.page__count{
+    font-size: var(--header-footer-font-size);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.page__count_no{
+    margin-right: .5rem;
+}
+.page__count i{
+    margin: 0 .5rem;
+    cursor: pointer;
+}
+.page__no{
+    margin: 0 .7rem;
+    border: .1rem solid var(--header-footer-icon);
+    padding: .3rem 1rem;
+    border-radius: .5rem;
 }
