--- a/style.css
+++ b/style.css
@@ -54,7 +54,9 @@ ul{
     left: 0;
     width: 30rem;
     height: 100vh;
-    z-index: -1;
+    z-index: 2000;
+    /* z-index: -1; */
+    /* display: none; */
 }
 .sidebar__text{
     text-align: center;
@@ -63,7 +65,7 @@ ul{
     font-weight: 600;
     padding: 1.5rem 0;
     text-transform: uppercase;
-    border-bottom: 1px solid var(--sidebar-border);
+    border-bottom: 1px solid #30336b;
 }
 .nav__item{
     position: relative;
@@ -80,11 +82,11 @@ ul{
     text-align: start;
     color: var(--text);
     padding: 1rem 1.5rem;
-    border-bottom: 1px solid var(--sidebar-border);
+    border-bottom: 1px solid #30336b;
 }
 .nav__link:hover{
-    color: var(--header-footer-color);
-    background-color: var(--sidebar-border);
+    color: var(--header-footer-text-color);
+    background-color: #130f40;
     transition: .6s ease-in-out;
 }
 
@@ -94,6 +96,7 @@ ul{
 }
 .header{
     position: fixed;
+    top: 0;
     width: calc(100% - 30rem);
     height: 5rem;
     background-color: var(--header-footer-color);
@@ -101,6 +104,7 @@ ul{
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
+    /* display: none; */
 }
 .pages{
     font-size: var(--header-footer-font-size);
@@ -133,8 +137,12 @@ ul{
 }
 .bars, 
 .four__square{
-    color: var(--header-footer-text-color);
+    color: #dff9fb;
     font-size: var(--header-footer-font-size);
+    border: 1px solid rgb(250, 250, 252);
+    padding: 0 .5rem;
+    border-radius: .5rem;
+    cursor: pointer;
 }
 .filter__form input{
     border: none;
@@ -202,6 +210,30 @@ ul{
 .page__no{
     margin: 0 .7rem;
     border: .1rem solid var(--header-footer-icon);
-    padding: .3rem 1rem;
+    padding: 0 .7rem;
     border-radius: .5rem;
+}
+
+/* Card area */
+.card__area{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh - 10rem;
+    
+}
+.card__items{
+    margin: 6rem auto;
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1rem;
+    box-sizing: border-box;
+}
+.card__item{
+    height: 30rem;
+    width: 25rem;
+    background: blueviolet;
+    /* margin-left: 1rem; */
 }
