--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ ul{
     --color-primary: #e67e22;
     --bg-primary: #ecf0f1;
     --text: #16191a;
+    --text-second: #ffffff;
     --hover: #81ecec;
     --hover-text-color: #f5f6fa;
     --share-icon: #4cd137;
@@ -46,7 +47,7 @@ ul{
 
 /* Sidebar */
 .sidebar{
-    background-color: #dfe6e9;
+    background-color: #757575;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     position: fixed;
     top: 0;
@@ -61,9 +62,10 @@ ul{
     font-size: 2.5rem;
     letter-spacing: 3px;
     font-weight: 600;
+    color: var(--bg-primary);
     padding: 1.5rem 0;
     text-transform: uppercase;
-    border-bottom: 1px solid #30336b;
+    border-bottom: 1px solid #adaeaf;
 }
 .nav__item{
     position: relative;
@@ -78,9 +80,9 @@ ul{
     font-size: 1.6rem;
     font-weight: 500;
     text-align: start;
-    color: var(--text);
+    color: var(--text-second);
     padding: 1rem 1.5rem;
-    border-bottom: 1px solid #30336b;
+    border-bottom: 1px solid #d6d6d6;
 }
 .nav__link:hover{
     color: var(--header-footer-text-color);
@@ -106,10 +108,14 @@ ul{
 .pages{
     font-size: var(--header-footer-font-size);
     color: var(--header-footer-text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .pages i{
-    margin: 0 .5rem;
+    margin: 0 .8rem;
     cursor: pointer;
+    font-size: 2.5rem;
 }
 .price__box{
     color: var(--header-footer-text-color);
@@ -203,6 +209,7 @@ ul{
 .page__count i{
     margin: 0 .5rem;
     cursor: pointer;
+    font-size: 2.5rem;
 }
 .page__no{
     margin: 0 .7rem;
@@ -229,8 +236,8 @@ ul{
     box-sizing: border-box;
 }
 .card__item{
-    max-height: 30rem;
-    max-width: 25rem;
+    min-height: 30rem;
+    min-width: 25rem;
     background: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     cursor: pointer;
@@ -285,7 +292,7 @@ ul{
     position: relative;
     display: flex;
     justify-content: space-between;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     padding: 2rem 1rem;
     font-weight: 600;
     overflow: hidden;
@@ -304,6 +311,7 @@ ul{
 .card__footer{
     position: relative;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
+    margin-top: 2rem;
 }
 .icons{
     font-size: 2.5rem;
