padding and updated grid to flex for mobile responsive

--- a/style.css
+++ b/style.css
@@ -478,6 +478,9 @@ ul{
     }
     .card__item{
         padding: 1rem;
+    }
+    .card__item,
+    .card__item#popup{
         width: 100%;
         min-height: 3rem;
     }
