--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
 }
 html{
+    scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
     font-size: 10px;
 }
