even more button removed for mobile

--- a/style.css
+++ b/style.css
@@ -489,9 +489,11 @@ ul{
     #popup .card__footer .card__footer__main .rating__star{
         font-size: 1.7rem;
     }
-    #popup .card__footer__main .close__button,
-    #popup .card__footer__main .more__button{
+    #popup .card__footer__main .close__button{
         font-size: 1.7rem;
+    }
+    #popup .card__footer__main .more__button{
+        display: none;
     }
     .card__item,
     .card__item#popup{
