margin bottom updated for mobile responsive cards

--- a/style.css
+++ b/style.css
@@ -476,6 +476,7 @@ ul{
     .cards{
         display: flex;
         flex-direction: column;
+        margin-bottom: 1rem;
     }
     .card__item{
         padding: 1rem;
