--- a/style.css
+++ b/style.css
@@ -159,16 +159,16 @@ ul{
 }
 .search__box{
     position: relative;
-    padding: .2rem 1rem;
-    margin: 0 1rem;
+    margin: 0;
+    width: 20%;
     background: var(--header-footer-text-color);
-    width: 20rem;
     height: 2.5rem;
 }
-.input{
-    height: 2rem;
+input[type=text]{
+    background: rgb(255, 255, 255);
+    height: 2.5rem;
     margin: 0;
-    padding-right: 3rem;
+    padding: .5rem;
     width: 100%;
     border: none;
     outline: none;
@@ -181,6 +181,47 @@ ul{
     color: var(--header-footer-text-color);
     background-color: var(--header-footer-color);
     padding: .4rem .5rem;
+    cursor: pointer;
+}
+.search__box__res{
+    display: none;
+}
+.ranges{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.ranges .slider1{
+    height: .7rem;
+    -webkit-appearance: none;
+    border-radius: .5rem;
+    background-color: transparent;
+    box-shadow: inset 0 .5rem 2rem rgba(255, 255, 255, 0.8);
+    outline: none;
+}
+.ranges .slider2{
+    height: .7rem;
+    -webkit-appearance: none;
+    border-radius: .5rem;
+    background-color: transparent;
+    box-shadow: inset 0 .5rem 2rem rgba(255, 255, 255, 0.8);
+    outline: none;
+}
+.slider1::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50rem;
+    background-color: var(--color-primary);
+    cursor: pointer;
+}
+.slider2::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50rem;
+    background-color: var(--share-icon);
     cursor: pointer;
 }
 .toggle__btn{
@@ -448,9 +489,31 @@ ul{
     .header .search__box{
         display: none;
     }
-    .header .toggle__btn{
+    .header .search__box__res{
         display: block;
         margin-right: 2rem;
+    }
+    .input[type=text]{
+        padding: 0 1rem;
+        border-radius: 1rem;
+        background-color: rgba(255, 255, 255, 0.92);
+        color: rgb(24, 13, 54);
+        font-weight: 500;
+    }
+    .header .ranges{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .range{
+        display: block;
+    }
+    .slider1,
+    .slider2{
+        width: 80%;
+    }
+    .header .toggle__btn{
+        display: block;
     }
     .sidebar{
         left: -30rem;
