--- a/style.css
+++ b/style.css
@@ -473,6 +473,89 @@ input[type=text]{
     font-weight: 500;
 }
 
+/* Chat Button */
+.chat__btn{
+    position: relative;
+}
+.chat__btn i{
+    position: fixed;
+    z-index: 2000;
+    bottom: 5.5rem;
+    right: 2rem;
+    font-size: 2rem;
+    background: var(--share-icon);
+    padding: 1.5rem;
+    color: #ffffff;
+    box-shadow: 0 0 30px rgba(174, 240, 240, 0.281);
+}
+.chat__box{
+    position: relative;
+}
+.chat__box .form{
+    position: fixed;
+    z-index: 2000;
+    bottom: 11rem;
+    right: 2rem;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.7);
+    transition: 0.6s;
+    visibility: hidden;
+    opacity: 0;
+}
+.form .textarea{
+    outline: none;
+    border: none;
+    resize: none;
+    padding: 1.5rem;
+    font-size: 1.5rem;
+    background: #ffffff;
+    height: 30rem;
+    width: 30rem;
+    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+}
+.form.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.6s;
+    z-index: 2000;
+    background-color: #ffffff;
+}
+.frm__btn{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffffff;
+}
+.frm__btn button{
+    border: none;
+    outline: none;
+    background-color: #ffffff;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    margin: 1rem;
+    letter-spacing: 2px;
+}
+.frm__btn .close{
+    background-color: red;
+    color: white;
+    font-size: 1.4rem;
+}
+.close i{
+    margin-right: .5rem;
+}
+.frm__btn .submit{
+    background-color: var(--share-icon);
+    color: white;
+    font-size: 1.4rem;
+}
+.submit i{
+    margin-left: .5rem;
+}
+::placeholder{
+    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+}
+
 /* Media Queries */
 @media screen and (max-width:669px){
     .header{
@@ -559,10 +642,13 @@ input[type=text]{
     #popup .card__footer__main .more__button{
         display: none;
     }
-    .card__item,
-    .card__item#popup{
+    .card__item{
         width: 100%;
         min-height: 3rem;
+    }
+    .card__item#popup{
+        width: 100%;
+        height: 100vh;
     }
     .card__item#popup .card__content{
         display: flex;
@@ -577,5 +663,13 @@ input[type=text]{
     .card__footer{
         border-top: none;
         margin-top: 0;
+    }
+    .chat__btn i{
+        right: 1rem;
+        bottom: 1rem;
+    }
+    .chat__box .form{
+        right: 1rem;
+        bottom: 7rem;
     }
 }
