card popup paddingtop updated for mobile

--- a/style.css
+++ b/style.css
@@ -649,6 +649,7 @@ input[type=text]{
         min-height: 3rem;
     }
     .card__item#popup{
+        padding-top: 18rem;
         width: 100%;
         height: 100vh;
     }
