--- a/style.css
+++ b/style.css
@@ -557,7 +557,7 @@ input[type=text]{
 }
 
 /* Media Queries */
-@media screen and (min-width:481px) and (max-width:669px){
+@media screen and (max-width:669px){
     .header{
         width: 100%;
         display: flex;
