--- a/style.css
+++ b/style.css
@@ -97,12 +97,14 @@ ul{
     justify-content: space-between;
     align-items: center;
 }
-.color__picker{
-    margin-right: 1rem;
+.nav__item.color__picker > div{
+    margin: 0 2rem;
 }
 .pcr-app.visible{
     height: 150px;
     width: 300px;
+    top: 0 !important;
+    left: 0 !important;
 }
 .pcr-swatches.pcr-last button{
     margin: 0 10px !important;
@@ -139,6 +141,10 @@ ul{
 }
 .subnav .subnav-content.active {
     display: block;
+}
+.check{
+    height: 2rem;
+    width: 2rem;
 }
 /* Main section */
 .whole__content{
@@ -414,15 +420,6 @@ input[type=text]{
     margin: 0 .8rem;
     color: var(--active-off);
 }
-.pickr .pcr-button{
-    height: 1rem;
-    width: 1rem;
-    margin: 0 1rem;
-    outline: none;
-    border: none;
-    background: none !important;
-    border-radius: 50% !important;
-}
 .card__content{
     position: relative;
     display: flex;
@@ -449,20 +446,14 @@ input[type=text]{
     margin-top: 2rem;
 }
 .icons{
-    display: flex;
-    justify-content: baseline;
-    align-items: center;
     font-size: 2.5rem;
     padding: 0 .5rem;
-    margin: 1rem 0;
-}
-.icons input[type=checkbox]{
-    width: 20px;
-    height: 20px;
-    margin: 0 1rem;
 }
 .share{
     color: var(--share-icon);
+}
+.square{
+    color: var(--color-primary);
 }
 .card__footer__main{
     display: flex;
@@ -554,7 +545,7 @@ input[type=text]{
 #popup .card__footer .icons{
     font-size: 4rem;
 }
-#popup .card__footer .icons input{
+#popup .card__footer .icons .check{
     height: 3.2rem;
     width: 3.2rem;
 }
@@ -710,14 +701,15 @@ input[type=text]{
     .header .pages,
     .header .price__box,
     .header .bars,
-    .header .four__square,
-    .header .filter__form,
-    .header .search__box{
+    .header .four__square{
         display: none;
     }
-    .header .search__box__res{
+    .header .search__box__res,
+    .header .filter__form,
+    .header .search__box{
         display: block;
         margin-right: 2rem;
+        width: calc(100% - 75%);
     }
     .input[type=text]{
         padding: 0 1rem;
@@ -725,27 +717,6 @@ input[type=text]{
         background-color: rgba(255, 255, 255, 0.92);
         color: rgb(24, 13, 54);
         font-weight: 500;
-    }
-    .header .ranges{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .range{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .range p{
-        margin-right: 1rem;
-        font-size: 1.7rem;
-    }
-    .range .filter{
-        margin-left: 1.5rem;
-    }
-    .slider1,
-    .slider2{
-        width: 60%;
     }
     .header .toggle__btn{
         display: block;
@@ -787,6 +758,10 @@ input[type=text]{
     }
     #popup .card__footer .icons{
         font-size: 2.5rem;
+    }
+    #popup .card__footer .icons .check{
+        height: 2.1rem;
+        width: 2.1rem;
     }
     #popup .card__footer .card__footer__main .rating__star{
         font-size: 1.7rem;
@@ -841,14 +816,14 @@ input[type=text]{
     .header .pages,
     .header .price__box,
     .header .bars,
-    .header .four__square,
-    .header .filter__form,
-    .header .search__box{
+    .header .four__square{
         display: none;
     }
+    .header .filter__form,
+    .header .search__box,
     .header .search__box__res{
         display: block;
-        width: 35%;
+        width: calc(100% - 75%);
     }
     .input[type=text]{
         padding: 0 1rem;
@@ -856,26 +831,6 @@ input[type=text]{
         background-color: rgba(255, 255, 255, 0.92);
         color: rgb(24, 13, 54);
         font-weight: 500;
-    }
-    .header .ranges{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .range{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .range p{
-        margin-right: 1rem;
-        font-size: 1.7rem;
-    }
-    .range .filter{
-        margin-left: 2rem;
-    }
-    .slider2{
-        margin-left: 1rem;
     }
     .header .toggle__btn{
         display: block;
@@ -927,6 +882,10 @@ input[type=text]{
     }
     #popup .card__footer__main .more__button{
         display: none;
+    }
+    #popup .card__footer .icons .check{
+        height: 2rem;
+        width: 2rem;
     }
     .card__item{
         width: 100%;
