--- a/style.css
+++ b/style.css
@@ -241,50 +241,6 @@ input[type=text]{
 .search__box__res{
     display: none;
 }
-.ranges{
-    display: none;
-}
-.range{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
-}
-.range p{
-    color: var(--hover-text-color);
-}
-.ranges .slider1{
-    height: .7rem;
-    -webkit-appearance: none;
-    border-radius: .5rem;
-    background-color: transparent;
-    box-shadow: inset 0 .5rem 2rem rgba(255, 255, 255, 0.8);
-    outline: none;
-}
-.ranges .slider2{
-    height: .7rem;
-    -webkit-appearance: none;
-    border-radius: .5rem;
-    background-color: transparent;
-    box-shadow: inset 0 .5rem 2rem rgba(255, 255, 255, 0.8);
-    outline: none;
-}
-.slider1::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 50rem;
-    background-color: var(--color-primary);
-    cursor: pointer;
-}
-.slider2::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 50rem;
-    background-color: var(--share-icon);
-    cursor: pointer;
-}
 .toggle__btn{
     color: var(--bg-primary);
     font-size: 2rem;
@@ -708,7 +664,6 @@ input[type=text]{
     .header .filter__form,
     .header .search__box{
         display: block;
-        margin-right: 2rem;
         width: calc(100% - 75%);
     }
     .input[type=text]{
@@ -816,14 +771,17 @@ input[type=text]{
     .header .pages,
     .header .price__box,
     .header .bars,
-    .header .four__square,
-    .header .filter__form,
-    .header .search__box{
+    .header .four__square{
         display: none;
     }
+    .header .filter__form{
+        width: calc(100%-75%);
+    }
+    .header .filter__form,
+    .header .search__box,
     .header .search__box__res{
         display: block;
-        width: 35%;
+        width: calc(100% -75%) !important;
     }
     .input[type=text]{
         padding: 0 1rem;
@@ -831,26 +789,6 @@ input[type=text]{
         background-color: rgba(255, 255, 255, 0.92);
         color: rgb(24, 13, 54);
         font-weight: 500;
-    }
-    .header .ranges{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .range{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .range p{
-        margin-right: 1rem;
-        font-size: 1.7rem;
-    }
-    .range .filter{
-        margin-left: 2rem;
-    }
-    .slider2{
-        margin-left: 1rem;
     }
     .header .toggle__btn{
         display: block;
